62788--Fix events spacing and calendar border
https://project.mediacurrent.com/slactoday/node/62788

When more than one event ware next to each other on day view, they
would display against each other without any space in between them.
I corrected this by adding margin to the right of each event so there
is separation.
Also fix issue with calednar top border on day view.  The top border
was showing double the width as it was being applied on two different
places.

mario h.

--- a/sites/all/themes/slac/sass/components/_calendar-overlap.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-overlap.scss
@@ -378,7 +378,7 @@
   margin-bottom: 0.5rem;
 
   @include breakpoint($tablet-large) {
-    margin-right: 1rem;
+    margin-right: 1.2rem;
   }
 }
 
