--- a/sites/all/themes/slac/sass/components/_calendar.scss
+++ b/sites/all/themes/slac/sass/components/_calendar.scss
@@ -108,6 +108,7 @@
 
 .calendar-calendar .day-view {
   border: 3px solid color(grey-blue);
+  border-top: none;
   border-left: none;
   border-bottom: none;
 }
